fixed nav issues alignment

--- a/css/Home.css
+++ b/css/Home.css
@@ -320,6 +320,7 @@ subnav ul {
 
 main {
     max-width: 1128px;
+    width: 100%;
     margin-top: 75px;
     margin-left: auto;
     margin-right: auto;
@@ -717,6 +718,7 @@ postpre {
     nav > section:nth-child(2) > ul {
         display: flex;
         justify-content: space-around;
+        padding: 0;
     }
 
     nav > section > ul > li:nth-child(2),
